  BooleanProperty.toSQLValue() and getColumnType() moved up to ColumnProperty
  EntityConnectionImpl.setParameterValue() simplified, using the above
  PropertyImpl, value fetcher bug fixed, now handles BooleanProperty correctly
  LocalEntityConnectionProvider no longer logs calls to isConnected and isValid
  Petstore demo now uses BooleanProperty
  EntityDefinitionImpl.KeyGenerator implementations refactored
  Property.PropertyValueFetcher renamed to ValueFetcher
  Property.ColumnProperty.toSQLValue() renamed to toColumnValue()
  Property.ColumnValueConverter added
  Property.ColumnProperty.fromColumnValue() added
  Property.ColumnProperty.setColumnValueConverter() added
  BooleanProperty removed
  Previous KeyGenerator refactoring broke it, needs to lazily load the query due to remote connections
  EntitySelectCriteria.selectForUpdate field renamed to forUpdate along with accessors
  SubqueryPropertyImpl constructor overloaded with columnType parameter
  SubqueryPropertyImpl, removed unused constructor
  empdept ddl script simplified a bit
  EntityConnectionServer, added logging of unsuccessful login attempts
  EntityConnectionImpl.selectPropertyValues() now throws IllegalArgumentException if not a column based property, tested
  DoubleField.set/GetMaximumFractionDigits() added, a rather clumsy implementation
  SizedDocument.postInsert() added to accommodate the above
  EntityUiUtil.initializeTextField() uses the above
  Properties.columnProperty() method without columnType parameter removed
  RemoteEntityConnectionImpl, bug fixed, did not set method logger for non-pooled connections
  UiUtil.prepareScrollPaneDialog(), bug fixed, did not set OK button caption
  UiUtil.addKeyEvent() now removes key binding if action parameter is null
  DefaultEntityTableModel.bindEditModelEvents() renamed to bindEditModelEventsInternal()
  DefaultEntityTableModel.bindEditModelEvents() added for overriding